# mongodb-cdc-delta

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Makefile  PHASE4_IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.git-hooks/: check_credentials.py  enforce_md_location.py
.github/workflows/: lint.yml  security-scan.yml  security.yml  test.yml  type-check.yml
.specify/memory/: constitution.md
api/: pyproject.toml  requirements.txt
api/migrations/: 001_initial_schema.sql  002_seed_roles.sql  README.md
api/src/: __init__.py  config.py  dependencies.py  main.py
api/src/middleware/: __init__.py  audit.py  auth.py  rbac.py
api/src/models/: __init__.py  audit.py  auth.py
api/src/repositories/: __init__.py  audit_repo.py  user_repo.py
api/src/routers/: __init__.py  admin.py
api/src/services/: __init__.py  auth_service.py
config/kafka-connect/: debezium-mongodb.json
config/vault/policies/: api-policy.hcl  delta-writer-policy.hcl  reconciliation-policy.hcl
delta-writer/: Dockerfile  IMPLEMENTATION_GUIDE.md  pyproject.toml  requirements.txt
delta-writer/src/: __init__.py  config.py  main.py
delta-writer/src/consumer/: __init__.py  event_consumer.py  event_handler.py
delta-writer/src/storage/: __init__.py  minio_client.py
delta-writer/src/transformers/: __init__.py  bson_to_delta.py  schema_inferrer.py  type_resolver.py
delta-writer/src/utils/: checkpointing.py  error_handler.py
delta-writer/src/writer/: __init__.py  batch_processor.py  delta_writer.py  dlq_writer.py  schema_cache.py  schema_manager.py
docker/api/: Dockerfile.api
docker/compose/: .env.example  docker-compose.test.yml  docker-compose.yml
docker/kafka/: create-topics.sh
docker/kafka-connect/: Dockerfile
docker/monitoring/: alertmanager.yml  prometheus-alerts.yml  prometheus.yml
docker/monitoring/grafana/dashboards/: cdc-pipeline.json
docker/monitoring/jaeger/: config.yml
docker/monitoring/prometheus/: alerts.yml  prometheus.yml
docker/schema-registry/: register-schemas.sh
docker/vault/: config.hcl  init-secrets.sh
docker/vault/policies/: cdc-policy.hcl
docs/development/: setup.md  testing.md
docs/implementation/: IMPLEMENTATION_GUIDE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  phase5-summary.md  phase6-summary.md
scripts/: create-pipeline.sh  deploy-connector.sh  mongo-init.sh  seed-mongodb.sh  setup-local.sh  teardown.sh
shared/: __init__.py
shared/logging/: __init__.py  structured_logger.py
shared/metrics/: __init__.py  prometheus_metrics.py
shared/models/: __init__.py  common.py
shared/security/: __init__.py  crypto.py  vault_client.py
shared/tracing/: __init__.py  otel_config.py
specs/001-mongodb-cdc-delta/: plan.md  research.md  spec.md  tasks.md
specs/001-mongodb-cdc-delta/checklists/: requirements.md
tests/: __init__.py
tests/contract/: __init__.py  test_auth_api.py  test_debezium_events.py  test_delta_schema.py
tests/e2e/: test_cdc_flow.py  test_local_suite.py  test_schema_evolution.py
tests/fixtures/: sample_documents.json  schema_evolution_samples.json
tests/integration/: test_auth.py  test_cdc_delete.py  test_cdc_insert.py  test_cdc_update.py  test_corrupted_data.py  test_crash_recovery.py  test_docker_compose.py  test_rbac.py  test_retry_minio.py  test_schema_evolution.py  test_type_evolution.py
tests/load/: __init__.py  test_schema_evolution_load.py
tests/load/data_generators/: __init__.py  change_generator.py  mongodb_seeder.py
tests/testcontainers/: __init__.py  containers.py
tests/unit/: __init__.py  test_audit_log.py  test_bson_to_delta.py  test_checkpointing.py  test_delta_writer.py  test_dlq.py  test_jwt.py  test_rbac.py  test_retry.py  test_schema_manager.py  test_type_resolver.py
