[project]
name = "mongodb-cdc-delta-api"
version = "0.1.0"
description = "FastAPI REST API service for MongoDB CDC Delta Lake pipeline monitoring and management"
authors = [
    {name = "CDC Team", email = "cdc@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["fastapi", "api", "cdc", "mongodb", "delta-lake", "kafka"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/cdc-team/mongodb-cdc-delta"
Documentation = "https://github.com/cdc-team/mongodb-cdc-delta/tree/main/docs"
Repository = "https://github.com/cdc-team/mongodb-cdc-delta"
Issues = "https://github.com/cdc-team/mongodb-cdc-delta/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]

# Black code formatter configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

# Ruff linter configuration
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "ASYNC",# flake8-async
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "EXE",  # flake8-executable
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy-specific rules
    "RUF",  # ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "S104",    # possible binding to all interfaces
    "S108",    # probable insecure usage of temp file/directory
    "ANN101",  # missing type annotation for self in method
    "ANN102",  # missing type annotation for cls in classmethod
    "ANN401",  # dynamically typed expressions (Any) are disallowed
    "COM812",  # trailing comma missing (conflicts with formatter)
    "ISC001",  # implicitly concatenated string literals (conflicts with formatter)
    "FBT001",  # boolean positional arg in function definition
    "FBT002",  # boolean default value in function definition
    "PD",      # pandas-vet (not using pandas)
    "NPY",     # numpy-specific (not using numpy)
    "TRY003",  # avoid specifying long messages outside exception class
    "PLR0913", # too many arguments in function definition
    "PLR2004", # magic value used in comparison
]

exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    "*.egg-info",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "S105",    # hardcoded passwords allowed in tests
    "S106",    # hardcoded passwords allowed in tests
    "PLR2004", # magic values allowed in tests
    "ANN",     # type annotations not required in tests
    "ARG",     # unused arguments allowed in tests (fixtures)
    "PT011",   # pytest.raises without match parameter
    "SLF001",  # private member access allowed in tests
]
"src/migrations/**/*.py" = [
    "INP001",  # implicit namespace package (migrations)
]

[tool.ruff.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 50

# MyPy type checker configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true

# Per-module mypy configuration
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
    "--timeout=300",
    "--timeout-method=thread",
    "--asyncio-mode=auto",
]
asyncio_mode = "auto"
timeout = 300
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "contract: Contract tests",
    "slow: Slow tests",
    "performance: Performance tests",
    "api: API endpoint tests",
    "auth: Authentication and authorization tests",
    "db: Database integration tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "**/.venv/*",
    "**/venv/*",
    "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
    "except ImportError:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Bandit security linter configuration
[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist", "migrations"]
skips = ["B104", "B108"]  # Skip binding to all interfaces and temp file warnings

# Isort import sorting configuration
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
