[project]
name = "delta-writer"
version = "1.0.0"
description = "Kafka to Delta Lake CDC writer service"
requires-python = ">=3.11"
dependencies = [
    "deltalake>=0.15.0",
    "pyarrow>=14.0.0",
    "kafka-python>=2.0.2",
    "confluent-kafka>=2.3.0",
    "aioboto3>=12.0.0",
    "boto3>=1.34.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.3",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
